2005-08-05  Stephane Arnold <sarnold75@users.sourceforge.net>

	* bigfloat.tcl : Fixed a bug in [fromstr] when a number 
	  began with '+' ; another bug, in [fromdouble], when
	  a number began with '+' or '-'.
	* bigfloat.test : Added tests for fromdouble.

2005-08-04  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* bigfloat.man: Replaced a number of ?...? occurences to markup
	  optional arguments with the more correct [opt ...].

2005-08-04  Stephane Arnold <sarnold75@users.sourceforge.net>

	* bigfloat : Fixed a bug in [fromstr] when a number 
	  with an exponent beginning by 0 was given (like 1.1e+099)

	* bigfloat : Added a [fromdouble] new proc.

2005-08-01  Arjen Markus  <arjenmarkus@users.sourceforge.net>

        * Changed the credits for Ed Hume at his request
          (anti-spam measure)

2005-07-26  Stephane Arnold

	* Changed in many places : '[pi $precision]' 
	  to '[pi $precision 1]' in which $precision is treated
	  as binary digit length (instead of decimals)
	  since the internal representation of the mantissa is binary
	
2005-07-01  Stephane Arnold <sarnold75@users.sourceforge.net>

	* bigfloat.man,bigfloat.test,bigfloat.tcl : updated
	  copyright 2005
	* bigfloat.man : put the correct package version (1.2)

2005-07-01  Stephane Arnold <sarnold75@users.sourceforge.net>

	* bigfloat.tcl : new [int2float] conversion procedure
	* bigfloat.test : updated test suite for the new procedure
	* bigfloat.man : updated documentation and added a new EXAMPLES
			 section

2005-06-23  Arjen Markus  <arjenmarkus@users.sourceforge.net>

        * bigfloat.tcl: Removed the namespace import statement
        * bigfloat.test: Explicitly import the bigfloat procedures
        * qcomplex.test: Force the import of complex number procedures
                         (conflict with bigfloat's sqrt)

2005-06-22  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* statistics.test: Corrected typos in the test suite for the new
	  commands.
